--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "codeclan_portfolio",
+  "homepage": "https://simbobs.github.io/codeclan_portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,8 +11,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://simbobs.github.io/codeclan_portfolio"
+    "web-vitals": "^2.1.4"
+   
 
   },
   "scripts": {
