hoping for a solution

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codeclan_portfolio",
-  "homepage": "https://simbobs.github.io/codeclan_portfolio",
+  "name": "codeclanportfolio",
+  "homepage": "https://simbobs.github.io/codeclanportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,9 +11,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
-   
-
   },
   "scripts": {
     "start": "react-scripts start",
