--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codeclanportfolio",
-  "homepage": "https://simbobs.github.io/codeclanportfolio",
+  "homepage": "https://simbobs.github.io/codeclanportfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
